# microtubule_tracking

./: .flake8  .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml  requirements.txt  tox.ini
cluster/: finetune_cellpose.sbatch  multi_optimization.sbatch  multi_optimization_all.sbatch  optimization.sbatch  run_multi_optimization_slurm.sh  run_optimization.sh  run_optimization_1.sh  run_optimization_2.sh  run_optimization_3.sh  run_optimization_4.sh  run_optimization_5.sh  run_optimization_6.sh  run_optimization_all.sh  run_optimization_slurm.sh
config/: best_synthetic_config.json  best_synthetic_config_A.json  best_synthetic_config_A_fid.json  best_synthetic_config_B.json  local_tune_config_A.json  synthetic_config.json  synthetic_config_large.json  synthetic_config_small.json  synthetic_config_test.json  tuning_config.json  tuning_config_A.json  tuning_config_A_cosine.json  tuning_config_A_fid.json  tuning_config_A_jsd.json  tuning_config_A_kid.json  tuning_config_A_ndb.json  tuning_config_B.json  tuning_config_cluster.json  tuning_config_for_sampling.json  tuning_config_local.json
k8s/: eval.yaml  pvc.yaml
labeling/: label_studio.py  ls_json_to_maks.py
notebooks/: eval_expert_votes.ipynb
optimize_synthetic_data/: main.py
scripts/: anonymize_and_copy.py  classic_cv.py  convert_real_videos.py  convert_videos.py  eval_single.py  evaluate_all.sh  evaluate_similarity_grid.py  export_videos.py  finetune_anystar.py  finetune_cellposesam.py  generate_synthetic_data.py  hyperparam_search_stardist.py  optimize_synthetic_data.py  run_benchmark.py  run_video_tracker.py  sample_random_videos.py  show_napari.py  try_ultralytics_tracker.py
src/: __init__.py  data_generation.py
tests/: conftest.py  test_benchmark_dataset.py  test_benchmark_models_import.py  (+1 more)
(+146 files in other folders)
